# comfy-quants

./: .gitignore  README.md  pyproject.toml
ByteDance-Seed/SeedVR2/: seedvr2_convert.py
configs/: anima_2b_fp8.yaml  anima_2b_fp8_e5m2.yaml  anima_2b_mxfp8.yaml  anima_2b_nvfp4.yaml  qwen_image_2512_fp8_e5m2_static.yaml  qwen_image_2512_fp8_static.yaml  qwen_image_2512_int8_w8a8.yaml  qwen_image_2512_mxfp8.yaml  qwen_image_2512_nvfp4.yaml  qwen_image_edit_2511_fp8_e5m2_static.yaml  qwen_image_edit_2511_fp8_static.yaml  qwen_image_edit_2511_int4_svdquant_w4a4.yaml  qwen_image_edit_2511_int8_w8a8.yaml  qwen_image_edit_2511_mxfp8.yaml  qwen_image_edit_2511_nvfp4.yaml  qwen_image_layered_fp8_static.yaml  qwen_image_layered_int8_w8a8.yaml  qwen_image_layered_mxfp8.yaml  qwen_image_layered_nvfp4.yaml
docs/: README.md  architecture.md  cli.md
docs/formats/: awq_w4a16.md  fp8.md  int8_w8a8.md  mxfp8.md  nvfp4.md  svdquant_w4a4_kitchen_tilepack.md
docs/quantization/: README.md  anima.md  fp8.md  int4.md  int4_tools.md  int8_w8a8.md  mxfp8.md  native_int4.md  nvfp4.md  qwen_image_edit_2511_int4.md  seedvr2_int4_r128.md
examples/: edit_cases.jsonl  prompts_t2i.jsonl
schemas/: calibration_config.schema.json  manifest.schema.json  quant_config.schema.json  quant_tensor.schema.json  quant_tensor_index.schema.json  report.schema.json
scripts/: seedvr2_capture_activation_stats.py  seedvr2_int4_export.py
scripts/dev/: capture_qwen_image_edit_int4_activations.py  run_nunchaku_svdquant_fixture.py
src/comfy_quants/: __init__.py
tests/unit/: test_anima_selection.py  (+44 more)
(+127 files in other folders)
